# Wishlist

./: .env.example  README.md  SESSION_SNAPSHOT.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.cursor/rules/: mentor-mode.mdc
backend/: manage.py
backend/invites/: admin.py  api.py  models.py  telegram_init_data.py  tests.py
backend/invites/migrations/: 0001_initial.py  0002_alter_invite_max_uses.py  0003_alter_invite_expires_at.py  0004_telegramprofile_alter_invite_max_uses.py  0005_alter_telegramprofile_created_at_and_more.py  0006_alter_telegramprofile_telegram_user_id.py  0007_alter_inviteactivation_activated_at_and_more.py
backend/test/: test_wishlist_app.py
backend/wishlist/: api.py  asgi.py  config.py  settings.py  urls.py  wsgi.py
backend/wishlist_app/: api.py  models.py  schemas.py
backend/wishlist_app/migrations/: 0001_initial.py
