[project]
name = "wishlist"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeny1337",email = "genya-sozykin@mal.ru"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "django (>=4.2)",
    "django-ninja (>=1.6.2,<2.0.0)",
    "pydantic (>=2.11)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpie (>=3.2.4,<4.0.0)"
]
